Open Mod UI > Tools and click History for details.