@@ -1,1 +1,10 @@
-Open Mod UI > Tools and click History for details.
+Open Mod UI > Tools and click History for full details:
+
+- added a better random number generator option
+- added Caustic Zap spell at 1st, and Sonic Boom at 5th
+- added Focused, Powerful, and Widened spell metamagic
+- added Path of the Spirit's honed animal aspect at 14th
+- added Way of the Tempest subclass designed by [HiddenHax]
+- fixed Domain Defiler's insidious death magic
+- fixed Path of Reaver's corrupted blood
+- fixed Web spell break free DC calculation
